--- a/qt_gpu_ray/qt_gpu_ray.vcxproj
+++ b/qt_gpu_ray/qt_gpu_ray.vcxproj
@@ -154,14 +154,14 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
   </ItemDefinitionGroup>
   <ItemGroup>
     <CudaCompile Include="kernel.cu" />
-    <CudaCompile Include="shaderec.cu" />
-    <CudaCompile Include="sphere.cu" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mainwindow.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="camera.cuh" />
+    <ClInclude Include="camera_pinhole.cuh" />
     <ClInclude Include="define.cuh" />
     <ClInclude Include="drand48.cuh" />
     <ClInclude Include="fps.h" />
@@ -170,9 +170,13 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="objectbase.cuh" />
     <ClInclude Include="ray.cuh" />
     <ClInclude Include="rgbcolor.cuh" />
+    <ClInclude Include="sampler.cuh" />
+    <ClInclude Include="sample_multijitered.cuh" />
     <ClInclude Include="shaderec.cuh" />
     <ClInclude Include="sphere.cuh" />
     <ClInclude Include="vector.cuh" />
+    <ClInclude Include="viewplane.cuh" />
+    <ClInclude Include="world.cuh" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
